--- a/index.html
+++ b/index.html
@@ -43,35 +43,35 @@
           <img
             id="mobile-img"
             src="assets/images/illustration-sign-up-mobile.svg"
-            alt="#"
+            alt="decorative image"
           />
           <img
             id="desktop-img"
             src="assets/images/illustration-sign-up-desktop.svg"
-            alt="#"
+            alt="decorative image"
           />
         </div>
-        <div class="info">
+        <div class="info" role="content-info">
           <h1 class="main-heading">Stay updated!</h1>
           <p class="sub-text">
             Join 60,000+ product managers receiving monthly updates on:
           </p>
           <ul class="items">
             <li>
-              <img src="assets/images/icon-list.svg" />
+              <img src="assets/images/icon-list.svg" alt="list icon" />
               <p>Product discovery and building what matters</p>
             </li>
             <li>
-              <img src="assets/images/icon-list.svg" />
+              <img src="assets/images/icon-list.svg" alt="list icon" />
               <p>Measuring to ensure updates are a success</p>
             </li>
             <li>
-              <img src="assets/images/icon-list.svg" />
+              <img src="assets/images/icon-list.svg" alt="list icon" />
               <p>And much more!</p>
             </li>
           </ul>
         </div>
-        <div id="sign-up">
+        <div id="sign-up" role="input-email">
           <label>Email address</label>
           <p id="invalid-email">Valid email required</p>
           <input
@@ -92,9 +92,9 @@
         </div>
       </div>
 
-      <div id="submitted">
+      <div id="submitted" role="submitted-message">
         <div>
-          <img src="assets/images/icon-success.svg" alt="#" />
+          <img src="assets/images/icon-success.svg" alt="tick sign" />
           <h1>Thanks for subscribing!</h1>
           <p>
             A confirmation email has been sent to
