--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             alt="decorative image"
           />
         </div>
-        <div class="info" role="content-info">
+        <div class="info" role="contentinfo">
           <h1 class="main-heading">Stay updated!</h1>
           <p class="sub-text">
             Join 60,000+ product managers receiving monthly updates on:
@@ -71,7 +71,7 @@
             </li>
           </ul>
         </div>
-        <div id="sign-up" role="input-email">
+        <div id="sign-up" role="form">
           <label>Email address</label>
           <p id="invalid-email">Valid email required</p>
           <input
@@ -92,7 +92,7 @@
         </div>
       </div>
 
-      <div id="submitted" role="submitted-message">
+      <div id="submitted" role="status">
         <div>
           <img src="assets/images/icon-success.svg" alt="tick sign" />
           <h1>Thanks for subscribing!</h1>
