--- a/index.html
+++ b/index.html
@@ -81,12 +81,7 @@
             placeholder="email@company.com"
             required
           />
-          <button
-            id="submit"
-            class="btn input"
-            action="none"
-            onclick="validateEmail()"
-          >
+          <button id="submit" class="btn input" onclick="validateEmail()">
             Subscribe to monthly newsletter
           </button>
         </div>
