--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Newsletter sign up UI challenge by Frontend Mentor"
+    />
     <!-- displays site properly based on user's device -->
 
     <link
